[gd_scene load_steps=9 format=2]

[ext_resource path="res://Font/orange kid.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/Options.gd" type="Script" id=2]
[ext_resource path="res://Music/Menus.wav" type="AudioStream" id=3]

[sub_resource type="DynamicFont" id=1]
size = 100
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 30
font_data = ExtResource( 1 )

[node name="Options" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.282353, 0.694118, 0, 1 )

[node name="MenuTitle" type="RichTextLabel" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -128.5
margin_right = 128.5
margin_bottom = 145.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 1 )
text = "Options"

[node name="Fullscreen" type="RichTextLabel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -199.0
margin_top = -41.0
margin_right = -54.0
margin_bottom = 12.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 2 )
text = "Fullscreen:"

[node name="FSOn" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -45.0
margin_top = -31.0
margin_right = -8.0
margin_bottom = 12.0
custom_fonts/font = SubResource( 3 )
text = "On"

[node name="FSOff" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 9.0
margin_top = -31.0
margin_right = 53.0
margin_bottom = 12.0
custom_fonts/font = SubResource( 3 )
text = "Off"

[node name="Controls" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -43.5
margin_top = 106.5
margin_right = 49.5
margin_bottom = 149.5
custom_fonts/font = SubResource( 3 )
text = "Controls"

[node name="Vsync" type="RichTextLabel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -199.5
margin_top = 9.0
margin_right = -90.5
margin_bottom = 61.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 4 )
text = "Vsync:"

[node name="VSOn" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -97.0
margin_top = 19.0
margin_right = -60.0
margin_bottom = 62.0
custom_fonts/font = SubResource( 5 )
text = "On"

[node name="VSOff" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -43.0
margin_top = 19.0
margin_right = 1.0
margin_bottom = 62.0
custom_fonts/font = SubResource( 5 )
text = "Off"

[node name="BTMM" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -98.5
margin_top = -124.0
margin_right = 98.5
margin_bottom = -81.0
custom_fonts/font = SubResource( 3 )
text = "Back to Main Menu"

[node name="OptionsMenuMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
autoplay = true

[connection signal="pressed" from="FSOn" to="." method="_on_FSOn_pressed"]
[connection signal="pressed" from="FSOff" to="." method="_on_FSOff_pressed"]
[connection signal="pressed" from="Controls" to="." method="_on_Controls_pressed"]
[connection signal="pressed" from="VSOn" to="." method="_on_VSOn_pressed"]
[connection signal="pressed" from="VSOff" to="." method="_on_VSOff_pressed"]
[connection signal="pressed" from="BTMM" to="." method="_on_BTMM_pressed"]
